# folder-sync

./: .gitignore  README.md  main.py  pyproject.toml
folder_sync/: folder_sync.py  utils.py
tests/: test_folder_sync.py  test_utils.py
